Fix width to remove horizontal scrollbar. Update version.

--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ tr > td {
 }
 
 .session_cell {
-    width: 205px;
+    width: 200px;
     font-size: 12px;
     margin: 0px;
     cursor: pointer;
